Version <stable-version> released on <releaseDate>

New Hardware
 * H3C S5120 series supports MAC-Authentication and 802.1X with or without VoIP
 * Added Role support for all Cisco Wireless (WLC) models

New Features
 * debian packages (#1066, #1067)

Enhancements
 * minor refactoring and cleanup
 * debian support: arp binary location now configurable ([services].arp_binary)

Bug Fixes
 * RADIUS-based Disconnects not working for Aruba, AeroHIVE. Introduced in 3.3.2. (#1437)
 * interface configuration errors in the Web Admin (or on the CLI when editing the vip field)
 * debian support: radiusd is started even if disabled
 * 'uninitialized value' warnings in checkup phase (pfcmd checkup)

--------------------------------------------------------------------------------
Version 3.3.2 released on 2012-04-23

New Hardware
 * HP Procurve 5300 series now identified as supported (thanks to the community!)

Bug Fixes
 * critical fix for deauthentication affecting AeroHIVE, Aruba, Cisco Wireless, Motorola and Ruckus. Introduced in 3.3.0 (#1426)
 * Web Admin no longer showing errors in popup dialogs. Introduced in 3.0.3 (#1420)
 * violation trigger parser now more tolerant of trailing spaces
 * 'add user' renamed 'add admin' for consistency (#1381, Thanks to Joao Moreira)
 * apache tests under pfcmd checkup fails if modules generates warnings (#1283, Thanks to Philipp Snizek)
 * another shot at 'named not started if using inline enforcement only'
 * trap_limit feature fixes: local traps ignored and continue processing if no action (#1405)
 * false positive error reporting on the Web Admin on specific User-Agents (#1408)
 * saner axis in dashboard graphics

--------------------------------------------------------------------------------
Version 3.3.1 released on 2012-04-16

Bug Fixes
 * named not started if using inline enforcement only

--------------------------------------------------------------------------------
Version 3.3.0 released on 2012-04-13

New Hardware