@@ -117,23 +117,21 @@ sub doWeActOnThisTrap {
     # see ifType documentation in pf::SNMP::constants
     if ( ( $ifType == $SNMP::ETHERNET_CSMACD ) || ( $ifType == $SNMP::GIGABIT_ETHERNET ) ) {
         my @upLinks = $switch->getUpLinks();
-        # TODO: need to validate for empty array here to avoid warning
         if ( @upLinks && $upLinks[0] == -1 ) {
-            $logger->warn("Can't determine Uplinks for the switch -> do nothing");
+            $logger->warn("Can't determine Uplinks for the switch $switch->{_ip} -> do nothing");
         } else {
             if ( grep( { $_ == $ifIndex } @upLinks ) == 0 ) {
                 $weActOnThisTrap = 1;
             } else {
-                $logger->info( "$trapType trap received on "
-                        . $switch->{_ip}
-                        . " ifindex $ifIndex which is uplink and we don't manage uplinks"
+                $logger->info( "$trapType trap received on $switch->{_ip} "
+                    . "ifindex $ifIndex which is uplink and we don't manage uplinks"
                 );
             }
         }
     } else {
-        $logger->info( "$trapType trap received on "
-                . $switch->{_ip}
-                . " ifindex $ifIndex which is not ethernetCsmacd" );
+        $logger->info( "$trapType trap received on $switch->{_ip} "
+            . "ifindex $ifIndex which is not ethernetCsmacd"
+        );
     }
     return $weActOnThisTrap;
 }
